; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-tps68470.c_tps68470_gpio_input.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-tps68470.c_tps68470_gpio_input.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gpio_chip = type { i32 }
%struct.tps68470_gpio_data = type { %struct.regmap* }
%struct.regmap = type { i32 }

@TPS68470_N_REGULAR_GPIO = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@TPS68470_GPIO_MODE_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gpio_chip*, i32)* @tps68470_gpio_input to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tps68470_gpio_input(%struct.gpio_chip* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.gpio_chip*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.tps68470_gpio_data*, align 8
  %7 = alloca %struct.regmap*, align 8
  store %struct.gpio_chip* %0, %struct.gpio_chip** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load %struct.gpio_chip*, %struct.gpio_chip** %4, align 8
  %9 = call %struct.tps68470_gpio_data* @gpiochip_get_data(%struct.gpio_chip* %8)
  store %struct.tps68470_gpio_data* %9, %struct.tps68470_gpio_data** %6, align 8
  %10 = load %struct.tps68470_gpio_data*, %struct.tps68470_gpio_data** %6, align 8
  %11 = getelementptr inbounds %struct.tps68470_gpio_data, %struct.tps68470_gpio_data* %10, i32 0, i32 0
  %12 = load %struct.regmap*, %struct.regmap** %11, align 8
  store %struct.regmap* %12, %struct.regmap** %7, align 8
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* @TPS68470_N_REGULAR_GPIO, align 4
  %15 = icmp uge i32 %13, %14
  br i1 %15, label %16, label %19

16:                                               ; preds = %2
  %17 = load i32, i32* @EINVAL, align 4
  %18 = sub nsw i32 0, %17
  store i32 %18, i32* %3, align 4
  br label %25

19:                                               ; preds = %2
  %20 = load %struct.regmap*, %struct.regmap** %7, align 8
  %21 = load i32, i32* %5, align 4
  %22 = call i32 @TPS68470_GPIO_CTL_REG_A(i32 %21)
  %23 = load i32, i32* @TPS68470_GPIO_MODE_MASK, align 4
  %24 = call i32 @regmap_update_bits(%struct.regmap* %20, i32 %22, i32 %23, i32 0)
  store i32 %24, i32* %3, align 4
  br label %25

25:                                               ; preds = %19, %16
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local %struct.tps68470_gpio_data* @gpiochip_get_data(%struct.gpio_chip*) #1

declare dso_local i32 @regmap_update_bits(%struct.regmap*, i32, i32, i32) #1

declare dso_local i32 @TPS68470_GPIO_CTL_REG_A(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
